--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Max Taldykin",
   "license": "ISC",
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "gh-pages": "^2.2.0"
   }
 }
