--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "location",
   "version": "1.0.0",
-  "description": "Determine your current location",
+  "description": "Find yourself",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gh-pages -d src"
+    "deploy": "parcel build index.html && gh-pages -d dist"
   },
   "author": "Max Taldykin",
   "license": "ISC",
   "devDependencies": {
     "cssnano": "^4.1.10",
-    "gh-pages": "^2.2.0"
+    "gh-pages": "^2.2.0",
+    "parcel-bundler": "^1.12.4"
   }
 }
